--- a/S3.md
+++ b/S3.md
@@ -1,12 +1,15 @@
 # S3
 
-Try to FTP and to
-and to access an S3 hosted website. First time you setup to host a website on S3 takes about an hour. After you do a few, it is
+There are a few guide on the web on deploying/hosting a static website on S3.
+You should try  those.
+
+
+First time you setup to host a website on S3 takes about an hour. After you do a few, it is
 10 minutes.
 
 Steps at high level
 - Create S3 bucket
-- Ex policy, replace 'exapp' with your bucket name:
+- Ex policy, replace 'exapp' with your bucket name in here:
 
 		{
 			"Version": "2012-10-17",
@@ -23,8 +26,12 @@ Steps at high level
 
 - Go to IAM to create a user of S3
 - Certate a key and secret code. Store this information.
-- Create S3 user
 - In IAM create a group 'full access to s3'
 - FTP a simple website.
 - Configure the http cache - using an S3 Gui
 - Go back to S3 menu. In properties, make it a website. It gives you an url. Your CDN should point to this, and your DNS should point to your CDN.
+
+In the end, the question is, does CyberDuck (FTP) work?
+
+Try to FTP and to
+and to access an S3 hosted website.
