--- a/S3.md
+++ b/S3.md
@@ -1,37 +1,55 @@
 # S3
 
-There are a few guide on the web on deploying/hosting a static website on S3.
-You should try  those.
-
 
 First time you setup to host a website on S3 takes about an hour. After you do a few, it is
 10 minutes.
 
-Steps at high level
-- Create S3 bucket
-- Ex policy, replace 'exapp' with your bucket name in here:
+
+- Create S3 Bucker:
+
+- https://docs.aws.amazon.com/AmazonS3/latest/dev/HostingWebsiteOnS3Setup.html
+
+- Add Bucket Policy
 
 		{
-			"Version": "2012-10-17",
-			"Statement": [
-				{
-						"Sid": "AddPerm",
-						"Effect": "Allow",
-						"Principal": "*",
-						"Action": "s3:GetObject",
-						"Resource": "arn:aws:s3:::exapp/*"
-				}
-			]
+			"Version":"2012-10-17",
+			"Statement":[{
+				"Sid":"PublicReadGetObject",
+					"Effect":"Allow",
+				"Principal": "*",
+					"Action":["s3:GetObject"],
+					"Resource":["arn:aws:s3:::YOUR-BUCKET-NAME/*"
+					 ]
+				}]
 		}
 
+- Upload a simple index.html using console:
+- https://docs.aws.amazon.com/AmazonS3/latest/user-guide/upload-objects.html#upload-objects-by-file-selection
+
+
+- Test the website:
+- http://example-bucket.s3-website-region.amazonaws.com
+
+- Your CDN should point to this, and your DNS should point to your CDN.
+
+
+## Enable 'FTP' ( and File System Access) :
 - Go to IAM to create a user of S3
 - Certate a key and secret code. Store this information.
 - In IAM create a group 'full access to s3'
 - FTP a simple website.
-- Configure the http cache - using an S3 Gui
-- Go back to S3 menu. In properties, make it a website. It gives you an url. Your CDN should point to this, and your DNS should point to your CDN.
 
-In the end, the question is, does CyberDuck (FTP) work?
+In the end, the question is, does CyberDuck (FTP) work? CyberDuck and other GUI toools have S3 support.
 
-Try to FTP and to
-and to access an S3 hosted website.
+One that works, then we can assume our Admin tools will work with the file system.
+
+Now you can FTP the real site using GUI (ex: CyberDuck)
+
+## Configure the http expiration headers
+
+- http://s3browser.com/automatically-apply-http-headers.aspx
+
+or
+
+- http://cloudberrylab.com/explorer/amazon-s3.aspx
+
