--- a/S3.md
+++ b/S3.md
@@ -9,7 +9,7 @@ First time you setup to host a website on S3 takes about an hour. After you do a
 
 - https://docs.aws.amazon.com/AmazonS3/latest/dev/HostingWebsiteOnS3Setup.html
 
-- Add Bucket Policy
+- Add Bucket Policy in Permissions
 
 		{
 			"Version":"2012-10-17",
@@ -30,12 +30,12 @@ First time you setup to host a website on S3 takes about an hour. After you do a
 - Test the website:
 - http://example-bucket.s3-website-region.amazonaws.com
 
-- Your CDN should point to this, and your DNS should point to your CDN.
+- Your CDN should point to this, and your DNS should point to your CDN ( Ex: KeyCDN and EasyDNS )
 
 
 ## Enable 'FTP' ( and File System Access) :
-- Go to IAM to create a user of S3
-- Certate a key and secret code. Store this information.
+- Go to AWS IAM to create a user of S3
+- Create a key and secret code. Store this information.
 - In IAM create a group 'full access to s3'
 - FTP a simple website.
 
@@ -43,9 +43,11 @@ In the end, the question is, does CyberDuck (FTP) work? CyberDuck and other GUI 
 
 One that works, then we can assume our Admin tools will work with the file system.
 
-Now you can FTP the real site using GUI (ex: CyberDuck)
+Now you can FTP the real site using GUI.
+( also a remote File System, what we use in the admin moudle)
 
 ## Configure the http expiration headers
+at the origin (S3)
 
 - http://s3browser.com/automatically-apply-http-headers.aspx
 
