--- a/S3.md
+++ b/S3.md
@@ -26,9 +26,7 @@ First time you setup to host a website on S3 takes about an hour. After you do a
 - Upload a simple index.html using console:
 - https://docs.aws.amazon.com/AmazonS3/latest/user-guide/upload-objects.html#upload-objects-by-file-selection
 
-- On the Properties Tab of your bucket, ensure that you have "Static Website Hosting" enabled (and index.html as index document). Note the Endpoint on the dialog. It will look similar to the following (with your bucket name and possibly another region instead of 'us-east-2')
-
-- http://example-bucket.s3-website.us-east-2.amazonaws.com
+- On the Properties Tab of your bucket, ensure that you have "Static Website Hosting" enabled (and index.html as index document). Note: this dialog will give you the url!!.
 
 - Test the website.
 
