--- a/S3.md
+++ b/S3.md
@@ -47,7 +47,7 @@ Now you can FTP the real site using GUI.
 ( also a remote File System, what we use in the admin moudle)
 
 ## Configure the http expiration headers
-at the origin (S3)
+at the origin, there are 2 tools to help, S3Browser and/or CloudBerry:
 
 - http://s3browser.com/automatically-apply-http-headers.aspx
 
